.provarCaches/00D410000011HE0EAM/objects/rstkf__paysessvend__c.object
<CustomObject>
    <description>paysessvend__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__paysessvend_paysession__r.Name + &apos;-&apos; + 
Left(rstkf__paysessvend_povend__r.Name, 50) + &apos;-&apos; + 
Text(rstkf__paysessvend_paycurr__r.rstk__sycurr_currency__c) + &apos;-&apos; + 
Text(rstkf__paysessvend_paytype__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_actualpayind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_appayd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payments Detail</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_apwhtcert__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Withholding Tax Certificate generated for the Payment Selection Session Vendor</inlineHelpText>
        <label>Certificate Number</label>
        <referenceTo>rstkf__apwhtcert__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_bankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_bankcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors (Bank Account Currency)</relationshipLabel>
        <relationshipName>paysessvends4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_checkmemo__c</fullName>
        <label>Check Memo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_checknumber__c</fullName>
        <label>Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_discavailable__c</fullName>
        <label>Discount Available</label>
        <summarizedField>rstkf__paysessinv__c.rstkf__paysessinv_discavailable__c</summarizedField>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_discavailablebank__c</fullName>
        <formula>rstkf__paysessvend_discavailable__c * rstkf__paysessvend_payexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field contains the sum of the Discount Available in Bank Currency from all invoices for the Vendor in this Payment Session</inlineHelpText>
        <label>Discount Available – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_handcheckind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hand Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_maintcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Maintenance Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors (Vendor Maintenance Currency)</relationshipLabel>
        <relationshipName>paysessvends3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_maintexchrate__c</fullName>
        <label>Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_maintsyforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>maintpaysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_netopenamt__c</fullName>
        <formula>rstkf__paysessvend_totunapplamtmaint__c - rstkf__paysessvend_discavailable__c -  rstkf__paysessvend_whtamt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_netopenamtbank__c</fullName>
        <formula>ROUND((rstkf__paysessvend_totunapplamtmaint__c - rstkf__paysessvend_discavailable__c -  rstkf__paysessvend_whtamt__c ) * BLANKVALUE(rstkf__paysessvend_payexchrate__c, 1), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Open Amount –Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_numbinv__c</fullName>
        <label>Number of Invoices</label>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_numbinvprocess__c</fullName>
        <label>Number of docs on Check Stub</label>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_process__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_numbinvtopost__c</fullName>
        <label>Number of Invoices to Post</label>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_process__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_bypasspost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_paycurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_payexchrate__c</fullName>
        <label>Transaction to Bank Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_payment_date__c</fullName>
        <label>EFT Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_paysessdate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Session Pay Date</description>
        <inlineHelpText>This field ties this Session Vendor to the corresponding Session Payment Date</inlineHelpText>
        <label>Payment Session Pay Date</label>
        <referenceTo>rstkf__paysessdate__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_paysession__c</fullName>
        <label>Payment Session</label>
        <referenceTo>rstkf__paysession__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_paysyforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange Pay Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors (Foreign Exchange Pay Rate Schedule)</relationshipLabel>
        <relationshipName>paypaysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_paytype__c</fullName>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_povend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_povendcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_povendpoaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remit to Address</label>
        <referenceTo>rstk__povendpoaddr__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors</relationshipLabel>
        <relationshipName>paysessvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_selectpayind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected for Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totdisctknamt__c</fullName>
        <label>Discount Amt</label>
        <summarizedField>rstkf__paysessinv__c.rstkf__paysessinv_disctknamt__c</summarizedField>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totdisctknamtbank__c</fullName>
        <formula>rstkf__paysessvend_totdisctknamt__c * rstkf__paysessvend_payexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field contains the sum of the Discounts Taken in Bank Currency from all invoices for the Vendor in this Payment Session</inlineHelpText>
        <label>Discounts Taken – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totgrosspay__c</fullName>
        <label>Gross Payment Amount</label>
        <summarizedField>rstkf__paysessinv__c.rstkf__paysessinv_grosspay__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_process__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_bypasspost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totgrosspaybank__c</fullName>
        <formula>rstkf__paysessvend_totgrosspay__c  * rstkf__paysessvend_payexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field contains the sum of the Gross Payment amount in Bank Currency from all invoices for the Vendor in this Payment Session</inlineHelpText>
        <label>Gross Payment – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totnetpay__c</fullName>
        <label>Net Payment Amt</label>
        <summarizedField>rstkf__paysessinv__c.rstkf__paysessinv_netpay__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_bypasspost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_process__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totnetpaybank__c</fullName>
        <formula>ROUND(rstkf__paysessvend_totnetpay__c * BLANKVALUE(rstkf__paysessvend_payexchrate__c, 1),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Payment – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totnetpayhome__c</fullName>
        <formula>rstkf__paysessvend_totnetpay__c * rstkf__paysessvend_maintexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Payment in Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totunapplamtmaint__c</fullName>
        <label>Open Amount</label>
        <summarizedField>rstkf__paysessinv__c.rstkf__paysessinv_unapplamtmaint__c</summarizedField>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_totunapplamtmaintbank__c</fullName>
        <formula>rstkf__paysessvend_totunapplamtmaint__c * rstkf__paysessvend_payexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field contains the sum of the Open Amount in Bank Currency from all invoices for the Vendor in this Payment Session</inlineHelpText>
        <label>Open Amount – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_vatprocessingdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is a processing indicator noting that the Upon-Payment VAT portion of the processing has been completed for this transaction.</inlineHelpText>
        <label>Upon-Payment VAT Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_vendcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payment Selection Session Vendors (Vendor Currency)</relationshipLabel>
        <relationshipName>paysessvends2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_vendorcreditapplicdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is a processing indicator noting that the Credit Applications portion of the processing has been completed for this transaction.</inlineHelpText>
        <label>Credit Applications Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_vendorpaymentdone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is a processing indicator noting that the Payment Transaction portion of the processing has been completed for this transaction.</inlineHelpText>
        <label>Payment Processing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_whtamt__c</fullName>
        <label>WHT Amount</label>
        <summarizedField>rstkf__paysessinv__c.rstkf__paysessinv_amtwht__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__paysessinv__c.rstkf__paysessinv_process__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__paysessinv__c.rstkf__paysessinv_paysessvend__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessvend_whtamtbank__c</fullName>
        <formula>rstkf__paysessvend_whtamt__c * rstkf__paysessvend_payexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field contains the sum of the WHT Amount in Bank Currency from all invoices for the Vendor in this Payment Session</inlineHelpText>
        <label>WHT Amount – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Selection Session Vendors</label>
    <listViews>
        <fullName>Payment_Selection_Session_Vendors_filt</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessvend_paysession__c</columns>
        <columns>rstkf__paysessvend_povend__c</columns>
        <columns>rstkf__paysessvend_vendcurr__c</columns>
        <columns>rstkf__paysessvend_payment_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysessvend_paycurr__c</columns>
        <columns>rstkf__paysessvend_paytype__c</columns>
        <columns>rstkf__paysessvend_bankacct__c</columns>
        <columns>rstkf__paysessvend_totunapplamtmaint__c</columns>
        <columns>rstkf__paysessvend_netopenamt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Selection Session Vendors - filt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Payment_Selection_Session_Vendors_filt</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessvend_paysession__c</columns>
        <columns>rstkf__paysessvend_povend__c</columns>
        <columns>rstkf__paysessvend_checknumber__c</columns>
        <columns>rstkf__paysessvend_vendcurr__c</columns>
        <columns>rstkf__paysessvend_paycurr__c</columns>
        <columns>rstkf__paysessvend_paytype__c</columns>
        <columns>rstkf__paysessvend_bankacct__c</columns>
        <columns>rstkf__paysessvend_totunapplamtmaint__c</columns>
        <columns>rstkf__paysessvend_netopenamt__c</columns>
        <columns>rstkf__paysessvend_payment_date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payment Selection Session Vendors- filt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payment_Selection_Session_Vendors</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessvend_paysession__c</columns>
        <columns>rstkf__paysessvend_povend__c</columns>
        <columns>rstkf__paysessvend_vendcurr__c</columns>
        <columns>rstkf__paysessvend_paycurr__c</columns>
        <columns>rstkf__paysessvend_checknumber__c</columns>
        <columns>rstkf__paysessvend_checkmemo__c</columns>
        <columns>rstkf__paysessvend_paytype__c</columns>
        <columns>rstkf__paysessvend_bankacct__c</columns>
        <columns>rstkf__paysessvend_totunapplamtmaint__c</columns>
        <columns>rstkf__paysessvend_netopenamt__c</columns>
        <columns>rstkf__paysessvend_payment_date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payment Selection Session Vendors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Selection Session Vendors  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Selection Session Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__Number_Of_Invoice_to_Post_Validation</fullName>
        <active>true</active>
        <description>For a Vendor, the maximum number of Invoices that can be selected for Posting is 175.</description>
        <errorConditionFormula>rstkf__paysessvend_numbinvtopost__c &gt; 175</errorConditionFormula>
        <errorMessage>For a Vendor, the maximum number of Invoices that can be selected for Posting is 175.</errorMessage>
    </validationRules>
</CustomObject>